# SocialMediaMonitor

./: README.md
Leolio/: CMakeLists.txt  MainContent.qml  Registration.qml  database.cpp  database.h  main.cpp  main.qml  qml.qrc
Leolio/html/: index.html
